WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174448
Fix style. Use #pragma once in VideoFullscreen and PlaybackSession headers.
https://bugs.webkit.org/show_bug.cgi?id=174448
Summary
Fix style. Use #pragma once in VideoFullscreen and PlaybackSession headers.
Jeremy Jones
Reported
2017-07-12 17:37:08 PDT
Fix style. Use #pragma once in VideoFullscreen and PlaybackSession headers.
Attachments
Patch
(8.46 KB, patch)
2017-07-12 17:39 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-07-12 17:39:58 PDT
Created
attachment 315318
[details]
Patch
WebKit Commit Bot
Comment 2
2017-07-13 11:41:15 PDT
Comment on
attachment 315318
[details]
Patch Clearing flags on attachment: 315318 Committed
r219459
: <
http://trac.webkit.org/changeset/219459
>
WebKit Commit Bot
Comment 3
2017-07-13 11:41:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug