Fix style. Use #pragma once in VideoFullscreen and PlaybackSession headers. https://bugs.webkit.org/show_bug.cgi?id=174448

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-07-13
Reviewed by Eric Carlson.

No behavior change.

Source/WebCore:

* platform/cocoa/WebPlaybackSessionInterface.h:
* platform/cocoa/WebVideoFullscreenChangeObserver.h:
* platform/cocoa/WebVideoFullscreenModel.h:
* platform/cocoa/WebVideoFullscreenModelVideoElement.h:
* platform/ios/WebPlaybackSessionInterfaceAVKit.h:
* platform/ios/WebVideoFullscreenControllerAVKit.h:
* platform/ios/WebVideoFullscreenInterfaceAVKit.h:
* platform/mac/WebVideoFullscreenInterfaceMac.h:

Source/WebKit2:

* UIProcess/Cocoa/WebVideoFullscreenManagerProxy.h:
* WebProcess/cocoa/WebVideoFullscreenManager.h:

Canonical link: https://commits.webkit.org/191287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219459 268f45cc-cd09-0410-ab3c-d52691b4dbfc